// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApiKeysAdd /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Project API Keys
  </h2>,
  .emotion-0 {
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-1 {
  color: #6088FE;
}

<p
    className="emotion-0"
  >
    Create and manage API Keys for applications or tools you would like to integrate with Boon AI. An API Key is required to access data for this project using the Boon AI SDK and REST APIs. For more information please visit
     
    <a
      className="emotion-1"
      href="https://docs.boonai.app/boonsdk/working-with-api-keys"
      rel="noopener noreferrer"
      target="_blank"
    >
      our documentation
    </a>
    .
  </p>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create API key
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus,
.emotion-4 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover,
.emotion-4 .noop {
  border: 2px solid #ffffff;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-6 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-7 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  clear: both;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-11 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-13 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-15 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-16 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-105 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-105 button,
.emotion-105 a {
  margin-right: 16px;
}

.emotion-105 button:last,
.emotion-105 a:last {
  margin-right: 0;
}

.emotion-106 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-106,
.emotion-106:hover,
.emotion-106:visited,
.emotion-106 .noop {
  background-color: #3A5DFF;
}

.emotion-106:hover,
.emotion-106 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-106[aria-disabled=true],
.emotion-106 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoComplete="off"
          autoFocus={true}
          className="emotion-4"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-6"
    >
      <legend
        className="emotion-7"
      >
        Add Scope
      </legend>
      
      <div
        className="emotion-8"
      />
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemMonitor"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Monitor
          </span>
          <span
            className="emotion-16"
          >
            Allows access to monitoring endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemManage"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Manage
          </span>
          <span
            className="emotion-16"
          >
            Allows access to platform management endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectOverride"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Project Override
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to switch projects
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectDecrypt"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Project Decrypt
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to view encrypted project data
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ApiKeyManage"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Api Key Manage
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to manage API keys
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsRead"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Assets Read
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to read assets and associated files
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsImport"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Assets Import
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to import assets. (created and update)
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsDelete"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Assets Delete
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to remove assets
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectManage"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Manage
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to manage projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectCreate"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Create
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to create projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesRead"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Files Read
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to read project files from cloud storage.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesWrite"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Files Write
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to store project files in cloud storage.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-105"
    >
      <button
        aria-disabled={true}
        className="emotion-106"
        onClick={[Function]}
        type="submit"
      >
        Generate Key & Download
      </button>
    </div>
  </form>,
]
`;

exports[`<ApiKeysAdd /> should render properly 2`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Project API Keys
  </h2>,
  .emotion-0 {
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-1 {
  color: #6088FE;
}

<p
    className="emotion-0"
  >
    Create and manage API Keys for applications or tools you would like to integrate with Boon AI. An API Key is required to access data for this project using the Boon AI SDK and REST APIs. For more information please visit
     
    <a
      className="emotion-1"
      href="https://docs.boonai.app/boonsdk/working-with-api-keys"
      rel="noopener noreferrer"
      target="_blank"
    >
      our documentation
    </a>
    .
  </p>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create API key
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

.emotion-3 {
  font-size: 21px;
  line-height: 30px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-4 {
  color: #b3b3b3;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-7 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 8px;
  border: none;
  resize: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-10:hover,
.emotion-10.focus-visible:focus,
.emotion-10 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-10:hover svg,
.emotion-10.focus-visible:focus svg,
.emotion-10 .noop svg {
  opacity: 1;
}

.emotion-10[aria-disabled=true],
.emotion-10 .noop {
  color: #808080;
}

.emotion-11 {
  padding: 4px;
  color: #808080;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-13 button,
.emotion-13 a {
  margin-right: 16px;
}

.emotion-13 button:last,
.emotion-13 a:last {
  margin-right: 0;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited,
.emotion-14 .noop {
  background-color: #808080;
}

.emotion-14:hover,
.emotion-14 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-14[aria-disabled=true],
.emotion-14 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited,
.emotion-15 .noop {
  background-color: #3A5DFF;
}

.emotion-15:hover,
.emotion-15 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-15[aria-disabled=true],
.emotion-15 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div>
    <div
      className="emotion-0"
    >
      <div
        className="emotion-1"
      >
        <svg
          color="#009f22"
          data-file-name="checkmark.svg"
          height={20}
        />
        <div
          className="emotion-2"
          role="alert"
        >
          Key generated & copied to clipboard.
        </div>
      </div>
    </div>
    <h3
      className="emotion-3"
    >
      Scope
    </h3>
    <ul
      className="emotion-4"
    >
      <li>
         Project Manage
      </li>
    </ul>
    <h3
      className="emotion-3"
    >
      API Key
    </h3>
    <div
      className="emotion-6"
    >
      <textarea
        className="emotion-7"
        defaultValue="{\\"id\\":\\"16fba9b7-f584-4d01-b2a2-62194941549d\\",\\"projectId\\":\\"00000000-0000-0000-0000-000000000000\\",\\"accessKey\\":\\"RyAtpOM9GoBseFA5WvGJMzzgPn9FDDWw\\",\\"secretKey\\":\\"fffa9d88108ead31415e0554af799ef8ec8787f3f261e3b1617b5bacce0672e39c220d442e30d95a49723add75fd39c3b61f3b0532d6457c02c93695a9d370b329af696ee7d8f81bc8b60d5b4fed8077f7a454b0563974614319a3d177308c17c2c291006403c0e6186059e579cef2ac\\",\\"name\\":\\"My New API Key\\",\\"permissions\\":[\\"ApiKeyManage\\"],\\"validationKey\\":{\\"id\\":\\"16fba9b7-f584-4d01-b2a2-62194941549d\\",\\"projectId\\":\\"00000000-0000-0000-0000-000000000000\\",\\"accessKey\\":\\"RyAtpOM9GoBseFA5WvGJMzzgPn9FDDWw\\",\\"secretKey\\":\\"fffa9d88108ead31415e0554af799ef8ec8787f3f261e3b1617b5bacce0672e39c220d442e30d95a49723add75fd39c3b61f3b0532d6457c02c93695a9d370b329af696ee7d8f81bc8b60d5b4fed8077f7a454b0563974614319a3d177308c17c2c291006403c0e6186059e579cef2ac\\",\\"name\\":\\"My New API Key\\",\\"permissions\\":[\\"ApiKeyManage\\"],\\"grantedAuthorities\\":[{\\"authority\\":\\"ApiKeyManage\\"}]}}"
        rows="5"
      />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <button
            aria-label="Copy API Key to Clipboard"
            className="emotion-10"
            onClick={[Function]}
            title="Copy API Key to Clipboard"
            type="button"
          >
            <svg
              data-file-name="copy.svg"
              height={20}
            />
          </button>
        </div>
        <span
          className="emotion-11"
        >
          |
        </span>
        <a
          className="emotion-10"
          download="api-key-name.json"
          href="data:application/octet-stream;charset=utf-8;base64,eyJpZCI6IjE2ZmJhOWI3LWY1ODQtNGQwMS1iMmEyLTYyMTk0OTQxNTQ5ZCIsInByb2plY3RJZCI6IjAwMDAwMDAwLTAwMDAtMDAwMC0wMDAwLTAwMDAwMDAwMDAwMCIsImFjY2Vzc0tleSI6IlJ5QXRwT005R29Cc2VGQTVXdkdKTXp6Z1BuOUZERFd3Iiwic2VjcmV0S2V5IjoiZmZmYTlkODgxMDhlYWQzMTQxNWUwNTU0YWY3OTllZjhlYzg3ODdmM2YyNjFlM2IxNjE3YjViYWNjZTA2NzJlMzljMjIwZDQ0MmUzMGQ5NWE0OTcyM2FkZDc1ZmQzOWMzYjYxZjNiMDUzMmQ2NDU3YzAyYzkzNjk1YTlkMzcwYjMyOWFmNjk2ZWU3ZDhmODFiYzhiNjBkNWI0ZmVkODA3N2Y3YTQ1NGIwNTYzOTc0NjE0MzE5YTNkMTc3MzA4YzE3YzJjMjkxMDA2NDAzYzBlNjE4NjA1OWU1NzljZWYyYWMiLCJuYW1lIjoiTXkgTmV3IEFQSSBLZXkiLCJwZXJtaXNzaW9ucyI6WyJBcGlLZXlNYW5hZ2UiXSwidmFsaWRhdGlvbktleSI6eyJpZCI6IjE2ZmJhOWI3LWY1ODQtNGQwMS1iMmEyLTYyMTk0OTQxNTQ5ZCIsInByb2plY3RJZCI6IjAwMDAwMDAwLTAwMDAtMDAwMC0wMDAwLTAwMDAwMDAwMDAwMCIsImFjY2Vzc0tleSI6IlJ5QXRwT005R29Cc2VGQTVXdkdKTXp6Z1BuOUZERFd3Iiwic2VjcmV0S2V5IjoiZmZmYTlkODgxMDhlYWQzMTQxNWUwNTU0YWY3OTllZjhlYzg3ODdmM2YyNjFlM2IxNjE3YjViYWNjZTA2NzJlMzljMjIwZDQ0MmUzMGQ5NWE0OTcyM2FkZDc1ZmQzOWMzYjYxZjNiMDUzMmQ2NDU3YzAyYzkzNjk1YTlkMzcwYjMyOWFmNjk2ZWU3ZDhmODFiYzhiNjBkNWI0ZmVkODA3N2Y3YTQ1NGIwNTYzOTc0NjE0MzE5YTNkMTc3MzA4YzE3YzJjMjkxMDA2NDAzYzBlNjE4NjA1OWU1NzljZWYyYWMiLCJuYW1lIjoiTXkgTmV3IEFQSSBLZXkiLCJwZXJtaXNzaW9ucyI6WyJBcGlLZXlNYW5hZ2UiXSwiZ3JhbnRlZEF1dGhvcml0aWVzIjpbeyJhdXRob3JpdHkiOiJBcGlLZXlNYW5hZ2UifV19fQ=="
        >
          Download
        </a>
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <button
        className="emotion-14"
        onClick={[Function]}
        type="button"
      >
        Create Another Key
      </button>
      <a
        className="emotion-15"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        View All
      </a>
    </div>
  </div>,
]
`;

exports[`<ApiKeysAdd /> should render properly 3`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Project API Keys
  </h2>,
  .emotion-0 {
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-1 {
  color: #6088FE;
}

<p
    className="emotion-0"
  >
    Create and manage API Keys for applications or tools you would like to integrate with Boon AI. An API Key is required to access data for this project using the Boon AI SDK and REST APIs. For more information please visit
     
    <a
      className="emotion-1"
      href="https://docs.boonai.app/boonsdk/working-with-api-keys"
      rel="noopener noreferrer"
      target="_blank"
    >
      our documentation
    </a>
    .
  </p>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create API key
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus,
.emotion-4 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover,
.emotion-4 .noop {
  border: 2px solid #ffffff;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-6 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-7 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  clear: both;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-11 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-13 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-15 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-16 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-105 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-105 button,
.emotion-105 a {
  margin-right: 16px;
}

.emotion-105 button:last,
.emotion-105 a:last {
  margin-right: 0;
}

.emotion-106 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-106,
.emotion-106:hover,
.emotion-106:visited,
.emotion-106 .noop {
  background-color: #3A5DFF;
}

.emotion-106:hover,
.emotion-106 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-106[aria-disabled=true],
.emotion-106 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoComplete="off"
          autoFocus={true}
          className="emotion-4"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-6"
    >
      <legend
        className="emotion-7"
      >
        Add Scope
      </legend>
      
      <div
        className="emotion-8"
      />
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemMonitor"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Monitor
          </span>
          <span
            className="emotion-16"
          >
            Allows access to monitoring endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemManage"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Manage
          </span>
          <span
            className="emotion-16"
          >
            Allows access to platform management endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectOverride"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Project Override
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to switch projects
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectDecrypt"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             System Project Decrypt
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to view encrypted project data
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ApiKeyManage"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Api Key Manage
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to manage API keys
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsRead"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Assets Read
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to read assets and associated files
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsImport"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Assets Import
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to import assets. (created and update)
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsDelete"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Assets Delete
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to remove assets
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectManage"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Manage
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to manage projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectCreate"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Create
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to create projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesRead"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Files Read
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to read project files from cloud storage.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesWrite"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
             Project Files Write
          </span>
          <span
            className="emotion-16"
          >
            Provides ability to store project files in cloud storage.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-105"
    >
      <button
        aria-disabled={true}
        className="emotion-106"
        onClick={[Function]}
        type="submit"
      >
        Generate Key & Download
      </button>
    </div>
  </form>,
]
`;
